# DataStorageProject

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  docker-compose.yml  pytest.ini  requirements.txt
dbase-api-server/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  python_run.py
dbase-api-server/dbase_api_server/: containers.py  dbase.py  main.py  models.py
dbase-api-server/tests/: .env  conftest.py  environment.py  test_containers.py  test_dbase.py  test_main.py  testing_environment.py
environment/: README.md  pyproject.toml
environment/environment/: __init__.py  docker_client.py  storage.py
environment/tests/: test_docker_client.py  test_storage.py
postgres-server/: Dockerfile  postgres.sql
service/: logger_config.py
test-environment/: pyproject.toml
test-environment/test_environment/: docker.py  docker_client.py  storage.py
test-environment/tests/: test_docker_client.py  test_storage.py
