[tool.poetry]
name = "dbase-api-server"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"
packages = [{include = "dbase_api_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
psycopg2 = "^2.9.4"
flake8-annotations = "^2.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
