[tool.poetry]
name = "dbase-api-server"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"
packages = [{include = "dbase_api_server"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
docker = "^6.0.0"
PyPika = "^0.48.9"
psycopg = {extras = ["binary"], version = "^3.1.3"}
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
