[tool.poetry]
name = "environment"
version = "0.1.0"
description = ""
authors = ["Michael <mihail.tchernov@yandex.ru>"]
readme = "README.md"
packages = [{include = "environment"}]

[tool.poetry.dependencies]
python = "^3.8"
docker = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
